Update README.md
update the read me with proper formatting